WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38085
REGRESSION (
r51617
): WebView fails to load plug-in MIME types
https://bugs.webkit.org/show_bug.cgi?id=38085
Summary
REGRESSION (r51617): WebView fails to load plug-in MIME types
mitz
Reported
2010-04-24 14:37:48 PDT
Patch forthcoming.
Attachments
Use self instead of -[self _webView]
(2.88 KB, patch)
2010-04-24 14:44 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-04-24 14:38:36 PDT
<
rdar://problem/7903728
>
mitz
Comment 2
2010-04-24 14:44:57 PDT
Created
attachment 54224
[details]
Use self instead of -[self _webView]
mitz
Comment 3
2010-04-24 14:55:14 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/58221
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug