<rdar://problem/7903728> REGRESSION (r51617): WebView fails to load plug-in MIME types https://bugs.webkit.org/show_bug.cgi?id=38085

Reviewed by Darin Adler.

WebView was calling -_webView in a few places where it should have just used itself. It never
makes sense for WebView to call -_webView on itself, and these calls look like they were copied
from similar code in WebHTMLView, WebFrameView and WebDataSource, where -_webView has a different,
useful meaning.

* WebView/WebView.mm:
(-[WebView drawSingleRect:]): Replaced [self _webView] with self.
(-[WebView _viewClass:andRepresentationClass:forMIMEType:]): Replaced [[self _webView] preferences]
with _private->preferences.
(-[WebView _canShowMIMEType:]): Ditto.



Canonical link: https://commits.webkit.org/49501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58221 268f45cc-cd09-0410-ab3c-d52691b4dbfc